--- a/src/app/geo/geo.component.html
+++ b/src/app/geo/geo.component.html
@@ -1,3 +1,3 @@
-<button (click)="geoFindMe()">Show my location</button><br/>
+<p>Show my location</p><br/>
 <p>{{ status }}</p>
 <a target="_blank" href="{{ href }}">{{ mapLink }}</a>
